<package format="2">
  <name>SVDroneMon</name>
  <version>1.0.0</version>
  <description>
  This package provides fuck capability.
  </description>
  <maintainer email="sheldonvon@outlook.com">sv</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>serial</build_depend>
</package>